--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     <title>Home</title>
     <link rel="stylesheet" href="/style.css" />
 
-    <script src="./assets/ts/main.ts" defer type="module"></script>
+    <script src="/assets/ts/main.ts" defer type="module"></script>
   </head>
   <body>
     <div class="absolute left-0 -z-10 hidden md:block">
-      <img class="h-[1300px]" src="./assets/images/first-pattern.png" alt="" />
+      <img class="h-[1300px]" src="/assets/images/first-pattern.png" alt="" />
     </div>
     <header class="space-y-5">
       <div class="hidden border-b py-5 *:text-gray-300 sm:block">
@@ -57,11 +57,11 @@
       </div>
       <nav class="container-w flex items-center justify-between font-medium">
         <ul class="hidden items-center gap-10 md:flex">
-          <li><img src="./assets/images/logo-orange.png" alt="" /></li>
+          <li><img src="/assets/images/logo-orange.png" alt="" /></li>
           <li>
             <a
               href=""
-              class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+              class="active relative after:absolute after:left-0 after:right-0 after:top-5 after:m-auto after:block after:w-fit after:content-[url('/assets/images/Selected.svg')]"
               >صفحه اصلی</a
             >
           </li>
@@ -128,12 +128,12 @@
                 <div class="border-t-2 border-t-orange-400 p-3">
                   <ul class="flex flex-col items-center gap-10">
                     <li>
-                      <img src="./assets/images/logo-orange.png" alt="" />
+                      <img src="/assets/images/logo-orange.png" alt="" />
                     </li>
                     <li>
                       <a
                         href=""
-                        class="active relative after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('./assets/images/Selected.svg')]"
+                        class="active relative after:absolute after:left-0 after:right-0 after:m-auto after:block after:w-fit after:content-[url('/assets/images/Selected.svg')]"
                         >صفحه اصلی</a
                       >
                     </li>
@@ -167,7 +167,7 @@
               </div>
             </div>
           </button>
-          <img width="20" src="./assets/images/logo-orange.png" />
+          <img width="20" src="/assets/images/logo-orange.png" />
         </div>
         <div class="flex items-center gap-5">
           <a class="hidden md:block" href="">ورود / ثبت نام</a>
@@ -227,13 +227,13 @@
       </nav>
     </header>
     <div class="absolute left-0 right-0 m-auto hidden w-fit md:block">
-      <img src="./assets/images/arrow-1.png" alt="" />
+      <img src="/assets/images/arrow-1.png" alt="" />
     </div>
     <main class="space-y-10">
       <section>
         <div class="flex flex-col items-center gap-9 *:basis-full md:flex-row">
           <div class="order-2 md:-order-1">
-            <img src="./assets/images/logo-large.png" alt="" />
+            <img src="/assets/images/logo-large.png" alt="" />
           </div>
           <div class="mt-14 space-y-6 px-5 md:mt-0">
             <p
@@ -248,7 +248,7 @@
                 هتل و اقامتگاه
               </h1>
               <div>
-                <img src="./assets/images/mangotles.png" alt="" />
+                <img src="/assets/images/mangotles.png" alt="" />
               </div>
             </div>
             <p class="max-w-[58ch]">
@@ -372,7 +372,7 @@
           <img
             width="100"
             height="100"
-            src="./assets/images/mangotles.png"
+            src="/assets/images/mangotles.png"
             alt=""
           /><svg
             width="31"
@@ -696,11 +696,7 @@
             </div>
           </section>
           <div class="absolute right-0 -z-10 hidden md:block">
-            <img
-              class="h-[1100px]"
-              src="./assets/images/pattern-2.png"
-              alt=""
-            />
+            <img class="h-[1100px]" src="/assets/images/pattern-2.png" alt="" />
           </div>
         </div>
       </section>
@@ -731,7 +727,7 @@
         </div>
 
         <div class="absolute right-[29rem]">
-          <img src="./assets/images/arrow-2.png" alt="" />
+          <img src="/assets/images/arrow-2.png" alt="" />
         </div>
 
         <ul
@@ -977,7 +973,7 @@
               <div class="flex justify-between">
                 <p class="text-3xl font-extrabold">درباره ما</p>
                 <div class="absolute left-0">
-                  <img src="./assets/images/arrow-3.png" alt="" />
+                  <img src="/assets/images/arrow-3.png" alt="" />
                 </div>
               </div>
             </div>
@@ -1015,13 +1011,13 @@
             </div>
           </div>
           <div>
-            <img width="300" src="./assets/images/about.png" alt="" />
+            <img width="300" src="/assets/images/about.png" alt="" />
           </div>
         </div>
       </section>
 
       <div class="absolute left-0 z-10 hidden md:block">
-        <img src="./assets/images/pattern-3.png" alt="" />
+        <img src="/assets/images/pattern-3.png" alt="" />
       </div>
       <section class="relative z-40 overflow-hidden bg-[#FBEACC] py-10">
         <div class="mx-8 flex flex-col items-center justify-center">
@@ -1078,7 +1074,7 @@
                     >
                       <img
                         class="object-cover"
-                        src="./assets/images/ali.png"
+                        src="/assets/images/ali.png"
                         alt=""
                       />
                     </div>
@@ -1086,11 +1082,7 @@
                       class="mt-14 flex flex-col items-center justify-center"
                     >
                       <p class="text-2xl font-semibold">امیرعلی فرهادی</p>
-                      <img
-                        class="mb-7"
-                        src="./assets/images/5star.png"
-                        alt=""
-                      />
+                      <img class="mb-7" src="/assets/images/5star.png" alt="" />
                       <p>
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                         چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون
@@ -1109,7 +1101,7 @@
                     >
                       <img
                         class="object-cover"
-                        src="./assets/images/ali.png"
+                        src="/assets/images/ali.png"
                         alt=""
                       />
                     </div>
@@ -1117,11 +1109,7 @@
                       class="mt-14 flex flex-col items-center justify-center"
                     >
                       <p class="text-2xl font-semibold">امیرعلی فرهادی</p>
-                      <img
-                        class="mb-7"
-                        src="./assets/images/5star.png"
-                        alt=""
-                      />
+                      <img class="mb-7" src="/assets/images/5star.png" alt="" />
                       <p>
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                         چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون
@@ -1140,7 +1128,7 @@
                     >
                       <img
                         class="object-cover"
-                        src="./assets/images/ali.png"
+                        src="/assets/images/ali.png"
                         alt=""
                       />
                     </div>
@@ -1148,11 +1136,7 @@
                       class="mt-14 flex flex-col items-center justify-center"
                     >
                       <p class="text-2xl font-semibold">امیرعلی فرهادی</p>
-                      <img
-                        class="mb-7"
-                        src="./assets/images/5star.png"
-                        alt=""
-                      />
+                      <img class="mb-7" src="/assets/images/5star.png" alt="" />
                       <p>
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                         چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون
@@ -1171,7 +1155,7 @@
                     >
                       <img
                         class="object-cover"
-                        src="./assets/images/ali.png"
+                        src="/assets/images/ali.png"
                         alt=""
                       />
                     </div>
@@ -1179,11 +1163,7 @@
                       class="mt-14 flex flex-col items-center justify-center"
                     >
                       <p class="text-2xl font-semibold">امیرعلی فرهادی</p>
-                      <img
-                        class="mb-7"
-                        src="./assets/images/5star.png"
-                        alt=""
-                      />
+                      <img class="mb-7" src="/assets/images/5star.png" alt="" />
                       <p>
                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                         چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون
@@ -1239,7 +1219,7 @@
         </div>
       </section>
       <div class="absolute right-0 z-10 hidden md:block">
-        <img src="./assets/images/pattern-4.png" alt="" />
+        <img src="/assets/images/pattern-4.png" alt="" />
       </div>
       <section class="relative z-40 !mt-0 bg-[#FEF7EB]">
         <div class="container-w flex-col justify-center py-6">
@@ -1277,7 +1257,7 @@
                   <article class="rounded-2xl border p-2">
                     <div>
                       <div class="relative">
-                        <img src="./assets/images/articles.png" alt="" />
+                        <img src="/assets/images/articles.png" alt="" />
                         <div
                           class="absolute right-5 top-0 mt-3 flex items-center gap-3"
                         >
@@ -1381,7 +1361,7 @@
                   <article class="rounded-2xl border p-2">
                     <div>
                       <div class="relative">
-                        <img src="./assets/images/articles.png" alt="" />
+                        <img src="/assets/images/articles.png" alt="" />
                         <div
                           class="absolute right-5 top-0 mt-3 flex items-center gap-3"
                         >
@@ -1485,7 +1465,7 @@
                   <article class="rounded-2xl border p-2">
                     <div>
                       <div class="relative">
-                        <img src="./assets/images/articles.png" alt="" />
+                        <img src="/assets/images/articles.png" alt="" />
                         <div
                           class="absolute right-5 top-0 mt-3 flex items-center gap-3"
                         >
@@ -1589,7 +1569,7 @@
                   <article class="rounded-2xl border p-2">
                     <div>
                       <div class="relative">
-                        <img src="./assets/images/articles.png" alt="" />
+                        <img src="/assets/images/articles.png" alt="" />
                         <div
                           class="absolute right-5 top-0 mt-3 flex items-center gap-3"
                         >
@@ -1891,7 +1871,7 @@
             </div>
             <p class="mt-4">برند هایی که همراهشان هستیم</p>
             <div class="absolute -left-20">
-              <img src="./assets/images/arrow-4.png" alt="" />
+              <img src="/assets/images/arrow-4.png" alt="" />
             </div>
           </div>
         </div>
@@ -1909,7 +1889,7 @@
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
                   >
-                    <img src="./assets/images/customers-1.png" alt="" />
+                    <img src="/assets/images/customers-1.png" alt="" />
                   </div>
                 </div>
               </li>
@@ -1920,7 +1900,7 @@
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
                   >
-                    <img src="./assets/images/customers-2.png" alt="" />
+                    <img src="/assets/images/customers-2.png" alt="" />
                   </div>
                 </div>
               </li>
@@ -1931,7 +1911,7 @@
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
                   >
-                    <img src="./assets/images/customers-3.png" alt="" />
+                    <img src="/assets/images/customers-3.png" alt="" />
                   </div>
                 </div>
               </li>
@@ -1942,7 +1922,7 @@
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
                   >
-                    <img src="./assets/images/customers-4.png" alt="" />
+                    <img src="/assets/images/customers-4.png" alt="" />
                   </div>
                 </div>
               </li>
@@ -1953,7 +1933,7 @@
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
                   >
-                    <img src="./assets/images/customers-5.png" alt="" />
+                    <img src="/assets/images/customers-5.png" alt="" />
                   </div>
                 </div>
               </li>
@@ -1964,7 +1944,7 @@
                   <div
                     class="m-auto w-fit rounded-full bg-gray-200 p-4 transition-all duration-700 group-hover:bg-[#EAF7F0]"
                   >
-                    <img src="./assets/images/customers-6.png" alt="" />
+                    <img src="/assets/images/customers-6.png" alt="" />
                   </div>
                 </div>
               </li>
@@ -1975,7 +1955,7 @@
     </main>
     <footer class="mx-4 space-y-10 border-t pt-10">
       <div
-        class="container-w mid-sm:flex mx-3 hidden items-center justify-between rounded-full bg-request-form bg-cover bg-center bg-no-repeat"
+        class="container-w mx-3 hidden items-center justify-between rounded-full bg-request-form bg-cover bg-center bg-no-repeat mid-sm:flex"
       >
         <div class="flex items-center gap-3 p-3">
           <svg
@@ -2023,18 +2003,18 @@
         </div>
       </div>
       <div class="absolute left-0 hidden md:block">
-        <img class="h-[39rem]" src="./assets/images/pattern-6.png" alt="" />
+        <img class="h-[39rem]" src="/assets/images/pattern-6.png" alt="" />
       </div>
       <div
         class="m-auto flex max-w-[65rem] flex-col items-center gap-32 px-4 md:flex-row"
       >
-        <img width="" src="./assets/images/logo-with-text.png" alt="" />
+        <img width="" src="/assets/images/logo-with-text.png" alt="" />
 
         <p>
           <img
             class="inline"
             width="40"
-            src="./assets/images/mangotles.png"
+            src="/assets/images/mangotles.png"
             alt=""
           />
           یــک سیســتم جامــع هلتــداری طراحــی شــده مخصــوص بــازار ایـران بـا
@@ -2062,8 +2042,8 @@
             </button>
           </div>
           <div class="mt-7 hidden gap-3 md:flex">
-            <img src="./assets/images/en.png" alt="" />
-            <img src="./assets/images/sam.png" alt="" />
+            <img src="/assets/images/en.png" alt="" />
+            <img src="/assets/images/sam.png" alt="" />
           </div>
         </div>
         <div class="flex gap-4 *:basis-full">
@@ -2183,21 +2163,21 @@
       <div class="flex flex-col justify-between sm:flex-row">
         <ul class="flex items-center gap-3 md:hidden">
           <li>
-            <img src="./assets/images/instagram.png" alt="" />
+            <img src="/assets/images/instagram.png" alt="" />
           </li>
           <li>
-            <img src="./assets/images/youtube.png" alt="" />
+            <img src="/assets/images/youtube.png" alt="" />
           </li>
           <li>
-            <img src="./assets/images/whatsapp.png" alt="" />
+            <img src="/assets/images/whatsapp.png" alt="" />
           </li>
           <li>
-            <img src="./assets/images/facebook.png" alt="" />
+            <img src="/assets/images/facebook.png" alt="" />
           </li>
         </ul>
         <div class="mt-7 flex gap-3 md:hidden">
-          <img src="./assets/images/en.png" alt="" />
-          <img src="./assets/images/sam.png" alt="" />
+          <img src="/assets/images/en.png" alt="" />
+          <img src="/assets/images/sam.png" alt="" />
         </div>
       </div>
       <div class="border-t p-3">
@@ -2207,16 +2187,16 @@
           </p>
           <ul class="hidden items-center gap-3 md:flex">
             <li>
-              <img src="./assets/images/instagram.png" alt="" />
+              <img src="/assets/images/instagram.png" alt="" />
             </li>
             <li>
-              <img src="./assets/images/youtube.png" alt="" />
+              <img src="/assets/images/youtube.png" alt="" />
             </li>
             <li>
-              <img src="./assets/images/whatsapp.png" alt="" />
+              <img src="/assets/images/whatsapp.png" alt="" />
             </li>
             <li>
-              <img src="./assets/images/facebook.png" alt="" />
+              <img src="/assets/images/facebook.png" alt="" />
             </li>
           </ul>
         </div>
